added the line about how i feel with github

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>my personal awesome application</h1>
     <p>this is my practice application for githup</p>
+    <p>i think i will enjoy githup</p>
 
 </body>
 </html>
