added a list of apples

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <h1>my personal awesome application</h1>
     <p>this is my practice application for githup</p>
     <p>i think i will enjoy githup</p>
+    <ul>
+      <li>apple</li>
+        <li>banana</li>
+        <li>orage</li>
+    </ul>
 
 </body>
 </html>
