linked the index.html file with the css file

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     
     <title>personalapplication</title>
+    <link rel="stylesheet" href="StyleSheet.css"/>
 </head>
 <body>
     <h1>my personal awesome application</h1>
