added list of verggies

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <li>banana</li>
         <li>orage</li>
     </ul>
+    <ul>
+        <li>spinach</li>
+        <li>potato</li>
+    </ul>
 
 </body>
 </html>
